--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "passport-google-oauth20": "2.0.0",
     "path-parser": "2.0.2",
     "puppeteer": "1.3.0",
-    "redis": "2.8.0",
+    "redis": "^2.8.0",
+    "util": "^0.12.5",
     "uuid": "3.2.1"
   }
 }
