added redis cache with key as query

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build && node index.js",
-    "server": "nodemon index.js --ignore tests",
+    "server": "npm run build && nodemon index.js --ignore tests",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "NPM_CONFIG_PRODUCTION=false npm install --legacy-peer-deps --prefix client && npm run build --prefix client",
@@ -22,7 +22,7 @@
     "express": "4.15.3",
     "jest": "23.6.0",
     "migrate-mongoose": "3.2.2",
-    "mongoose": "5.10.11",
+    "mongoose": "^5.10.11",
     "nodemon": "1.11.0",
     "passport": "0.3.2",
     "passport-google-oauth20": "2.0.0",
